[Feature] Move search request body to a post endpoint. Support query params instead on GET
