# swagger-ui/swagger.yaml
@@ -77,18 +77,12 @@ paths:
         - $ref: '#/components/parameters/indexIdPathParam'
         - $ref: '#/components/parameters/pageQueryParam'
         - $ref: '#/components/parameters/perPageQueryParam'
-      requestBody:
-        description: >-
-          Options to format the results (append string fields with "keyword")
-           - `match` is an object of fields, with the criterion that must be matched for all results to be filtered and returned
-           - `search_value` is a string value for using with `search_fields`.
-           - `search_fields` is an array of all fields to be searched on. At least one field is required for the entity to be returned.
-           - `sort` is an array of fields with intended sort order of the results.
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/listDocumentsReqBody'
+        - $ref: '#/components/parameters/matchKeysQueryParam'
+        - $ref: '#/components/parameters/matchValuesQueryParam'
+        - $ref: '#/components/parameters/searchFieldsQueryParam'
+        - $ref: '#/components/parameters/searchValueQueryParam'
+        - $ref: '#/components/parameters/sortKeysQueryParam'
+        - $ref: '#/components/parameters/sortOrdersQueryParam'
       responses:
         200:
           description: A page of document results. Id field is always returned for each document in \"results\". Other fields depend on the document entity itself.
@@ -96,7 +90,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/documentPageResBody'
-        
+                
     post:
       tags:
         - "Documents"
@@ -118,6 +112,36 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/createdIdResBody'
+    
+  '/indices/{index_id}/documents/search':
+    post:
+      tags:
+        - "Documents"
+      description: >-
+        An alternative endpoint to retrieve documents from the target index. There are options to filter (full match), search (partial match), and sort the results
+      parameters:
+        - $ref: '#/components/parameters/indexIdPathParam'
+        - $ref: '#/components/parameters/pageQueryParam'
+        - $ref: '#/components/parameters/perPageQueryParam'
+      requestBody:
+        description: >-
+          Options to format the results (append string fields with "keyword")
+           - `match` is an object of fields, with the criterion that must be matched for all results to be filtered and returned
+           - `search_value` is a string value for using with `search_fields`.
+           - `search_fields` is an array of all fields to be searched on. At least one field is required for the entity to be returned.
+           - `sort` is an array of fields with intended sort order of the results.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/listDocumentsReqBody'
+      responses:
+        200:
+          description: A page of document results. Id field is always returned for each document in \"results\". Other fields depend on the document entity itself.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/documentPageResBody'
   
   '/indices/{index_id}/documents/{document_id}':
     get:
@@ -315,6 +339,54 @@ components:
         minimum: 1
         maximum: 50
         default: 10
+        
+    matchKeysQueryParam:
+      name: match_keys
+      in: query
+      description: A CSV string of properties to match. The entities in this CSV string should match the length of `match_values`
+      schema:
+        type: string
+        example: 'project_id.keyword,organization_id.keyword'
+        
+    matchValuesQueryParam:
+      name: match_values
+      in: query
+      description: A CSV string of values to match. The entities in this CSV string should match the length of `match_keys` 
+      schema:
+        type: string
+        example: '1p,1o'
+        
+    searchFieldsQueryParam:
+      name: search_fields
+      in: query
+      description: A CSV string of properties to search. To be paired in searching for value in `search_value`
+      schema:
+        type: string
+        example: 'first_name,last_name'
+        
+    searchValueQueryParam:
+      name: search_value
+      in: query
+      description: A plaintext string for searching. To be paired in searching for partial matched values in `search_fields`
+      schema:
+        type: string
+        example: 'jon snow'
+        
+    sortKeysQueryParam:
+      name: sort_keys
+      in: query
+      description: A CSV string of properties to sort. The entities in this CSV string should match the length of `sort_orders`
+      schema:
+        type: string
+        example: 'age,first_name.keyword'
+        
+    sortOrdersQueryParam:
+      name: sort_orders
+      in: query
+      description: A CSV string of values to sort. The entities in this CSV string should match the length of `sort_keys`. Valid values are `asc` and `desc`.
+      schema:
+        type: string
+        example: 'asc,desc'
     
 
   links: {}
